# logcabin-redis-proxy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/ae/: ae.c
src/proxy/: SessionManager.cc  SessionManager.h  handler.cc  handler.h  main.cc  proxy.cc  proxy.h
test/: SmokeTest.go  integrated_test_of_proxy.go
